yamls/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elementor-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: elementor-nginx
  rules:
  - http:
      paths:
      - path: elementor-svc
        pathType: Prefix
        nginx:
          service:
            name: test
            port:
              number: 80
